CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(OSGGLEWSrcDir)

  PROJECT(OSGGLEW)

  SET(${PROJECT_NAME}SharedTarget osgglew)
  SET(${PROJECT_NAME}StaticTarget libosgglew)

  SET(OSG_GLEW_SRCS ${OSGGLEWSrcDir}/src/glew.c)

  SET(OSG_GLEW_HDR ${OSGGLEWSrcDir}/include/GL/glew.h
                   ${OSGGLEWSrcDir}/include/GL/wglew.h)

  INCLUDE_DIRECTORIES(${OSGGLEWSrcDir}/include)

  SET(OSGGLEWLIB_DEF WIN32_MEAN_AND_LEAN;VC_EXTRALEAN;_VC80_UPGRADE=0x0600)

  IF(BUILD_SHARED_LIBS)
    ADD_LIBRARY(${${PROJECT_NAME}SharedTarget} SHARED ${OSG_GLEW_SRCS})

    ADD_DEPENDENCIES(ALL_STANDARD_BUILD ${${PROJECT_NAME}SharedTarget})

    SET_TARGET_PROPERTIES(${${PROJECT_NAME}SharedTarget} PROPERTIES
                          DEBUG_POSTFIX "D")

    SET(OSGGLEWLIB_DEF_SHARED ${OSGGLEWLIB_DEF};GLEW_BUILD;_WINDLL)
                          
    SET_TARGET_PROPERTIES(${${PROJECT_NAME}SharedTarget} PROPERTIES
                          COMPILE_DEFINITIONS "${OSGGLEWLIB_DEF_SHARED}")

    TARGET_LINK_LIBRARIES(${${PROJECT_NAME}SharedTarget} ${OPENGL_gl_LIBRARY})

    INSTALL(TARGETS ${${PROJECT_NAME}SharedTarget}
                CONFIGURATIONS Release Debug
                RUNTIME DESTINATION bin
                LIBRARY DESTINATION lib
                ARCHIVE DESTINATION lib)
  ENDIF(BUILD_SHARED_LIBS)

#  IF(BUILD_STATIC_LIBS)
#    ADD_LIBRARY(${${PROJECT_NAME}StaticTarget} STATIC ${OSG_GLEW_SRCS})

#    SET_TARGET_PROPERTIES(${${PROJECT_NAME}StaticTarget} PROPERTIES
#                          DEBUG_POSTFIX "D")

#    SET(OSGGLEWLIB_DEF_STATIC ${OSGGLEWLIB_DEF};GLEW_STATIC;_LIB)

#    SET_TARGET_PROPERTIES(${${PROJECT_NAME}StaticTarget} PROPERTIES
#                          COMPILE_DEFINITIONS "${OSGGLEWLIB_DEF_STATIC}")

#    INSTALL(TARGETS ${${PROJECT_NAME}StaticTarget}
#                CONFIGURATIONS Release Debug
#                RUNTIME DESTINATION bin
#                LIBRARY DESTINATION lib
#                ARCHIVE DESTINATION lib)
#  ENDIF(BUILD_STATIC_LIBS)

  INSTALL(FILES ${OSG_GLEW_HDR}
          DESTINATION include/GL
          PERMISSIONS OWNER_WRITE OWNER_READ
                      GROUP_READ
                      WORLD_READ)

  SET(OSG_GLEW_INCLUDE_DIR ${OSGGLEWSrcDir}/include CACHE PATH "")
# SET(OSG_GLEW_STATIC_LIBRARY ${${PROJECT_NAME}StaticTarget} CACHE STRING "")
  SET(OSG_GLEW_SHARED_LIBRARY ${${PROJECT_NAME}SharedTarget} CACHE STRING "")

ELSE(OSGGLEWSrcDir)
  SET(OSGGLEWSrcDir "" CACHE PATH "")
ENDIF(OSGGLEWSrcDir)
